<resources>
    <string name="app_name">Talk2Me</string>
    <string name="app_icon">app_icon</string>
    <string name="input_hit">Enter the text you would like to translate here</string>
    <string name="translated_text">Translated Text</string>
    <string name="microphone_icon">microphone icon\n</string>
    <string name="arrows_icon">switch arrows icon</string>
    <string name="down_arrow_icon">down arrow</string>
    <string name="listen">listen</string>
    <string name="speak">Speak</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="favourites">Favourites</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="clear_all_recents">Clear all Recents</string>
    <string name="clear_all_favourites">Clear All Favourites</string>
    <string name="clear_all_translations">Clear All Translations</string>
</resources>