<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="90dp"
    android:background="@drawable/back"
    android:layout_marginVertical="8dp"
    android:maxHeight="300dp"
    android:padding="16dp"
    >

    <LinearLayout
        android:layout_width = "match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spanish"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_marginStart="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="2dp"
            android:id="@+id/fromLanguageText"
            android:textStyle="bold"/>

        <!-- Translate Icon -->
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/rightarrow"
            android:contentDescription="@string/arrows_icon"
            android:layout_marginHorizontal="20dp"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:id="@+id/toLanguageText"
            android:textStyle="bold"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/star"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/microphone_icon"
            android:layout_gravity="center"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width = "match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spanish"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="2dp"
            android:id="@+id/originText"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:id="@+id/translatedText"/>


    </LinearLayout>

</LinearLayout>