<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings"
    android:orientation="vertical"
    android:background="@color/backgroundPrimary">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="18dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/previous"
            android:onClick="goBack"
            android:contentDescription="@string/app_icon" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="12dp"/>
    </LinearLayout>

    <!-- Button Options -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="2dp"
        android:gravity="center_horizontal"
        >

        <!-- Clear All Favourites Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clearRecentsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_all_recents"
            android:textColor="@color/white"
            android:background="@drawable/back_dark"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textSize="20sp"
            android:layout_marginBottom="1dp"
            android:onClick="clearAllRecents" />

        <!-- Clear All Recents Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clearFavouritesBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_all_favourites"
            android:textColor="@color/white"
            android:background="@drawable/back_dark"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textSize="20sp"
            android:layout_marginBottom="1dp"
            android:onClick="clearAllFavourites" />

        <!-- Clear All Translations Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clearTranslationsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_all_translations"
            android:textColor="@color/white"
            android:background="@drawable/back_dark"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textSize="20sp"
            android:onClick="clearAllTranslations" />

    </LinearLayout>



    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/black">

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/favouritesBTN"
            android:layout_marginHorizontal="10dp"
            android:onClick="handleFavouritesClick">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="22dp"
                android:src="@drawable/star"
                android:contentDescription="@string/microphone_icon"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favourites"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp"
            android:id="@+id/recentBTN"
            android:onClick="handleRecentClick"
            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="22dp"
                android:src="@drawable/history"
                android:contentDescription="@string/microphone_icon"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recent"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp"
            android:id="@+id/settingsBTN"
            android:onClick="handleSettingsClick">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="22dp"
                android:src="@drawable/settings"
                android:contentDescription="@string/microphone_icon"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>


    </LinearLayout>

</LinearLayout>